--- a/src/reference/01-General-Info/90-Changes/47-sbt-1.0-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/47-sbt-1.0-Release-Notes.md
@@ -196,7 +196,7 @@ Then, run:
 
 [#3133][3133] by [@eed3si9n][@eed3si9n] (forward ported from 0.13.16-M1)
 
-### CopyOptions
+#### CopyOptions
 
 sbt IO 1.0 add variant of `IO.copyFile` and `IO.copyDirectory` that accept `sbt.io.CopyOptions()`.
 `CopyOptions()` is an example of pseudo case class similar to the builder pattern.
@@ -278,6 +278,7 @@ that would should work together to allow dependency locking.
   [1911]: https://github.com/sbt/sbt/issues/1911
   [2059]: https://github.com/sbt/sbt/issues/2059
   [2662]: https://github.com/sbt/sbt/pull/2662
+  [3133]: https://github.com/sbt/sbt/pull/3133
   [util80]: https://github.com/sbt/util/pull/80
   [3198]: https://github.com/sbt/sbt/issues/3198
   [lm88]: https://github.com/sbt/librarymanagement/pull/88
