--- a/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
+++ b/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
@@ -879,6 +879,11 @@ In the second example, artifacts with the organization `"com.example"` and the n
 sbt 0.13.8 adds a new `Def.sequential` function to run tasks under semi-sequential semantics.
 Here's an example usage:
 
+    val testFile = settingKey[File]("")
+    val sideEffect0 = taskKey[File]("")
+    val sideEffect1 = taskKey[File]("")
+    val foo = taskKey[Unit]("")
+
     lazy val root = project.
       settings(
         testFile := target.value / "test.txt",
