How to take an action on startup

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -358,25 +358,7 @@ def augment(extra: Seq[File])(s: State): State = {
 
 #### How can I take action when the project is loaded or unloaded?
 
-The single, global setting `onLoad` is of type `State => State` (see
-[State and Actions][Build-State]) and is executed once, after all projects are
-built and loaded. There is a similar hook `onUnload` for when a project
-is unloaded. Project unloading typically occurs as a result of a
-`reload` command or a `set` command. Because the `onLoad` and `onUnload`
-hooks are global, modifying this setting typically involves composing a
-new function with the previous value. The following example shows the
-basic structure of defining `onLoad`:
-
-```scala
-// Compose our new function 'f' with the existing transformation.
-{
-  val f: State => State = ...
-  onLoad in Global := {
-    val previous = (onLoad in Global).value
-    f compose previous
-  }
-}
-```
+See [How to take an action on startup](Howto-Startup.html).
 
 #### Example of project load/unload hooks
 
