--- a/src/reference/ja/01-General-Info/Changes/47-sbt-1.0-Release-Notes.md
+++ b/src/reference/ja/01-General-Info/Changes/47-sbt-1.0-Release-Notes.md
@@ -32,7 +32,7 @@ out: sbt-1.0-Release-Notes.html
 
 - sbt 0.12 スタイルの `Build` trait は sbt 0.13.12 に廃止勧告となり、この度削除した。[build.sbt へと移行](Migrating-from-sbt-013x.html#Migrating+from+the+Build+trait)する必要がある。Auto plugin と `Build` trait は相性が悪く、またこの機能は既に普及しているマルチプロジェクト build.sbt によって置き換えられた。
 - sbt 0.12 スタイルの `Project(...)` コンストラクタは、2つのパラメータを受け取るものだけに制限する。これは、`settings` パラメータは Auto plugin と相性が悪いからだ。代わりに、`project` を使ってほしい。
-- sbt 0.12 スタイルのキー依存演算子 `<<=`, `<+=`, `<++=` は撤廃した。[:=、 +=、および ++= 演算子へと移行](Migrating-from-sbt-013x.html#Migrating+simple+expressions)してほしい。古い演算子は多くのユーザにとって混乱の元となっており、長らく 0.13 のドキュメンテーションからは削除され、sbt 0.13.13 移行正式に撤廃勧告が出ていた。
+- sbt 0.12 スタイルのキー依存演算子 `<<=`, `<+=`, `<++=` は撤廃した。[:=、 +=、および ++= 演算子へと移行](Migrating-from-sbt-013x.html#Migrating+simple+expressions)してほしい。古い演算子は多くのユーザにとって混乱の元となっており、長らく 0.13 のドキュメンテーションからは削除され、sbt 0.13.13 以降正式に撤廃勧告が出ていた。
 - Auto plugin ではない `sbt.Plugin` を撤廃した。`AutoPlugin` へと移行してほしい。Auto plugin の方が設定が簡単で、プラグイン間の協調が可能だからだ。
 - `Project` より `settingsSet` メソッドおよび `add/setSbtFiles` を削除する。
 - 廃止勧告が出ていた `InputTask` `apply` メソッドと `inputTask` DSL メソッドを撤廃する。`Def.inputTask` と `Def.spaceDelimited().parsed` へと移行してほしい。
