switch hosting of the installers

--- a/src/reference/ja/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/ja/00-Getting-Started/01-Setup/00.md
@@ -5,7 +5,7 @@ out: Setup.html
   [Basic-Def]: Basic-Def.html
   [Hello]: Hello.html
   [Running]: Running.html
-  [MSI]: $sbt_native_package_base$$app_version$/sbt-$app_version$.msi
+  [MSI]: $sbt_native_package_base$/sbt-$windows_app_version$.msi
   [Setup-Notes]: ../../docs/Setup-Notes.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
