What does sbt stand for, and how should I spell it?

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -30,6 +30,19 @@ Frequently Asked Questions
 
 ### Project Information
 
+#### What does sbt stand for, and how should I spell it?
+
+sbt is just sbt: It's no longer an acronym. When the project was first started
+it was called *Simple Build Tool*, but when the first release came out,
+it was already called [sbt 0.3.2](http://www.scala-lang.org/old/node/392.html).
+
+sbt is a proper noun that must be spelled with all lowercase.
+Any deviation from the guideline such as title casing or all caps are subject to side-eye frown face.
+We occationally set `sbt` in monospace font to specifically mean the bash/batch script `sbt` command.
+
+So again, sbt does NOT stand for simple anything, and certainly not Scala Build Tool.
+On the other hand, we are cool with [酢豚](https://ja.wikipedia.org/wiki/%E9%85%A2%E8%B1%9A) (subuta) as nickname.
+
 #### How do I get help?
 
 -  See [Get Involved](http://www.scala-sbt.org/community.html#how-can-I-get-help)
@@ -71,8 +84,11 @@ get output that looks like:
 ```
 
 or ansi codes are supported but you want to disable colored output. To
-completely disable ansi codes, set the `sbt.log.format` system property
-to `false`. For example,
+completely disable ansi codes, pass `-no-colors` option:
+
+```
+$ sbt -no-colors
+```
 
 #### How can I start a Scala interpreter (REPL) with sbt project configuration (dependencies, etc.)?
 
@@ -486,185 +502,6 @@ Any file name ending in `.sbt` will do, but most people use
 `~/.sbt/plugins/build.sbt` or `~/.sbt/plugins/plugins.sbt`.
 
 ### Miscellaneous
-
-#### How do I use the Scala interpreter in my code?
-
-sbt runs tests in the same JVM as sbt itself and Scala classes are not
-in the same class loader as the application classes. Therefore, when
-using the Scala interpreter, it is important to set it up properly to
-avoid an error message like:
-
-```
-Failed to initialize compiler: class scala.runtime.VolatileBooleanRef not found.
-** Note that as of 2.8 scala does not assume use of the java classpath.
-** For the old behavior pass -usejavacp to scala, or if using a Settings
-** object programmatically, settings.usejavacp.value = true.
-```
-
-The key is to initialize the Settings for the interpreter using
-*embeddedDefaults*. For example:
-
-```scala
- val settings = new Settings
- settings.embeddedDefaults[MyType]
- val interpreter = new Interpreter(settings, ...)
-```
-
-Here, MyType is a representative class that should be included on the
-interpreter's classpath and in its application class loader. For more
-background, see the
-[original proposal](https://gist.github.com/404272) that resulted in
-*embeddedDefaults* being added.
-
-Similarly, use a representative class as the type argument when using
-the *break* and *breakIf* methods of *ILoop*, as in the following
-example:
-
-```scala
-def x(a: Int, b: Int) = {
-  import scala.tools.nsc.interpreter.ILoop
-  ILoop.breakIf[MyType](a != b, "a" -> a, "b" -> b )
-}
-```
-
-### 0.7 to 0.10+ Migration
-
-#### How do I migrate from 0.7 to 0.10+?
-
-See the
-[migration page][Migrating-from-sbt-07x]
-first and then the following questions.
-
-#### Where has 0.7's `lib_managed` gone?
-
-By default, sbt $app_version$ loads managed libraries from your ivy cache
-without copying them to a `lib_managed` directory. This fixes some bugs
-with the previous solution and keeps your project directory small. If
-you want to insulate your builds from the ivy cache being cleared, set
-`retrieveManaged := true` and the dependencies will be copied to
-`lib_managed` as a build-local cache (while avoiding the issues of
-`lib_managed` in 0.7.x).
-
-This does mean that existing solutions for sharing libraries with your
-favoured IDE may not work. Refer to [Community Plugins page][Community-Plugins]
-for a list of currently available plugins for your IDE.
-
-#### What are the commands I can use in $app_version$ vs. 0.7?
-
-For a list of commands, run `help`. For details on a specific command,
-run `help <command>`. To view a list of tasks defined on the current
-project, run `tasks`. Alternatively, see the
-[Running][Running] page in the Getting Started Guide
-for descriptions of common commands and tasks.
-
-If in doubt start by just trying the old command as it may just work.
-The built in TAB completion will also assist you, so you can just press
-TAB at the beginning of a line and see what you get.
-
-The following commands work pretty much as in 0.7 out of the box:
-
-```
-reload
-update
-compile
-test
-testOnly
-publishLocal
-exit
-```
-
-#### Why have the resolved dependencies in a multi-module project changed since 0.7?
-
-sbt 0.10 fixes a flaw in how dependencies get resolved in multi-module
-projects. This change ensures that only one version of a library appears
-on a classpath.
-
-Use `last update` to view the debugging output for the last `update`
-run. Use `show update` to view a summary of files comprising managed
-classpaths.
-
-### My tests all run really fast but some are broken that weren't in 0.7!
-
-Be aware that compilation and tests run in parallel by default in sbt
-$app_version$. If your test code isn't thread-safe then you may want to
-change this behaviour by adding one of the following to your
-`build.sbt`:
-
-```scala
-// Execute tests in the current project serially.
-// Tests from other projects may still run concurrently.
-parallelExecution in Test := false
-
-// Execute everything serially (including compilation and tests)
-parallelExecution := false
-```
-
-#### What happened to the web development and Web Start support since 0.7?
-
-Web application support was split out into a plugin. See the
-[xsbt-web-plugin](https://github.com/earldouglas/xsbt-web-plugin)
-project.
-
-For an early version of an xsbt Web Start plugin, visit the
-[xsbt-webstart](https://github.com/ritschwumm/xsbt-webstart) project.
-
-#### How are inter-project dependencies different in $app_version$ vs. 0.7?
-
-In $app_version$, there are three types of project dependencies (classpath,
-execution, and configuration) and they are independently defined. These
-were combined in a single dependency type in 0.7.x. A declaration like:
-
-```scala
-lazy val a = project("a", "A")
-lazy val b = project("b", "B", a)
-```
-
-meant that the `B` project had a classpath and execution dependency on
-`A` and `A` had a configuration dependency on `B`. Specifically, in
-0.7.x:
-
-1.  Classpath: Classpaths for `A` were available on the appropriate
-    classpath for B.
-2.  Execution: A task executed on `B` would be executed on `A` first.
-3.  Configuration: For some settings, if they were not overridden in A,
-    they would default to the value provided in B.
-
-In $app_version$, declare the specific type of dependency you want. Read
-about [multi-project builds][Multi-Project] in the
-Getting Started Guide for details.
-
-#### Where did class/object X go since 0.7?
-
-<table>
-  <tr>
-    <th>0.7</th>
-    <th>$app_version$</th>
-  </tr>
-
-  <tr>
-    <td><a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html">FileUtilities</a></td>
-    <td><a href="../api/sbt/IO\$.html)">IO</a></td>
-  </tr>
-
-  <tr>
-    <td><a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html">Path class</a> and
-    <a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html">object</a></td>
-    <td>
-      <a href="../api/sbt/Path\$.html">Path object</a>, <tt>File</tt>,
-      <a href="../api/sbt/RichFile.html">RichFile</a>
-
-    </td>
-  </tr>
-
-  <tr>
-    <td><a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html">PathFinder class</a></td>
-    <td>
-      <tt>Seq[File]</tt>, 
-      <a href="../api/sbt/PathFinder.html)">PathFinder class</a>,
-      <a href="../api/sbt/PathFinder\$.html">PathFinder object</a>
-    </td>
-  </tr>
-</table>
 
 #### Where can I find plugins for $app_version$?
 
