Clarification around who's used "Scala Build Tool"

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -36,7 +36,7 @@ Frequently Asked Questions
 
 When Mark Harrah ([@harrah][]) first created the project he called it "Simple Build Tool", but in his
 [first public announcement][sbt 0.3.2 announcement] of it he already referred to it as just "sbt".
-Over time sbt was sometimes defined as "Scala Build Tool", but we believe that isn't accurate either
+Over time some have re-defined sbt to stand for "Scala Build Tool", but we believe that isn't accurate either
 given it can be used to build Java-only projects.
 
 Nowadays we just call sbt "sbt", and to reinforce that the name is no longer an [initialism][] we
