Fix faq formating
$ must be escaped for Pamflet.

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -30,7 +30,7 @@ Frequently Asked Questions
 
 ### Project Information
 
-#### What does the name "sbt" stand for and shouldn't it be written "SBT"?
+#### What does the name "sbt" stand for, and why shouldn't it be written "SBT"?
 
 **TL;DR** the name sbt doesn't stand for anything, it's just "sbt", and it should be written that way.
 
@@ -40,15 +40,12 @@ Over time some have re-defined sbt to stand for "Scala Build Tool", but we belie
 given it can be used to build Java-only projects.
 
 Nowadays we just call sbt "sbt", and to reinforce that the name is no longer an [initialism][] we
-always write it in all lowercase letters.
-
-However, we are cool with [酢豚][subuta] (subuta) as a nickname.
+always write it in all lowercase letters. However, we are cool with [酢豚][subuta] (subuta) as a nickname.
 
 [@harrah]: https://github.com/harrah
 [sbt 0.3.2 announcement]: http://www.scala-lang.org/old/node/392.html
 [initialism]: https://en.oxforddictionaries.com/definition/initialism
 [subuta]: https://ja.wikipedia.org/wiki/%E9%85%A2%E8%B1%9A
-
 
 #### How do I get help?
 
@@ -94,7 +91,7 @@ or ansi codes are supported but you want to disable colored output. To
 completely disable ansi codes, pass `-no-colors` option:
 
 ```
-$ sbt -no-colors
+\$ sbt -no-colors
 ```
 
 #### How can I start a Scala interpreter (REPL) with sbt project configuration (dependencies, etc.)?
