sbt is the "sbt build tool"

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -32,15 +32,15 @@ Frequently Asked Questions
 
 #### What does the name "sbt" stand for, and why shouldn't it be written "SBT"?
 
-**TL;DR** the name sbt doesn't stand for anything, it's just "sbt", and it should be written that way.
+The name sbt is recursive for the "sbt build tool".  However, it is no longer acknowledged as an [initialism][],
+so it is just "sbt", and should be written in all lowercase letters.
 
 When Mark Harrah ([@harrah][]) first created the project he called it "Simple Build Tool", but in his
 [first public announcement][sbt 0.3.2 announcement] of it he already referred to it as just "sbt".
 Over time some have re-defined sbt to stand for "Scala Build Tool", but we believe that isn't accurate either
 given it can be used to build Java-only projects.
 
-Nowadays we just call sbt "sbt", and to reinforce that the name is no longer an [initialism][] we
-always write it in all lowercase letters. However, we are cool with [酢豚][subuta] (subuta) as a nickname.
+However, we are cool with [酢豚][subuta] (subuta) as a nickname.
 
 [@harrah]: https://github.com/harrah
 [sbt 0.3.2 announcement]: http://www.scala-lang.org/old/node/392.html
