Fix API links for version 1.x

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -160,7 +160,7 @@ or when the outputs haven't been generated yet. This support is
 primitive and subject to change.
 
 The relevant methods are two overloaded methods called
-[FileFunction.cached](../api/sbt/FileFunction\$.html). Each requires a
+[FileFunction.cached](../api/sbt/util/FileFunction\$.html). Each requires a
 directory in which to store cached data. Sample usage is:
 
 ```scala
@@ -184,10 +184,10 @@ the input tracking style is `FilesInfo.lastModified`, based on a file's
 last modified time, and the output tracking style is `FilesInfo.exists`,
 based only on whether the file exists. The other available style is
 `FilesInfo.hash`, which tracks a file based on a hash of its contents.
-See the [FilesInfo API](../api/sbt/FilesInfo\$.html) for details.
+See the [FilesInfo API](../api/sbt/util/FilesInfo\$.html) for details.
 
 A more advanced version of `FileFunction.cached` passes a data structure
-of type [ChangeReport](../api/sbt/ChangeReport.html) describing the
+of type [ChangeReport](../api/sbt/util/ChangeReport.html) describing the
 changes to input and output files since the last evaluation. This
 version of `cached` also expects the set of files generated as output to
 be the result of the evaluated function.
