Remove the link to non-existent SXR
Fixes #538

--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -72,5 +72,4 @@ Documentation for 0.7.x has been
 documentation applies to sbt $app_version$.
 
 See also the [API Documentation](../api/index.html),
-[SXR Documentation](../sxr/index.html), and the
-[index of names and types][Name-Index].
+and the [index of names and types][Name-Index].
