Add/fix links on 1.0 release notes page

--- a/src/reference/01-General-Info/90-Changes/47-sbt-1.0-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/47-sbt-1.0-Release-Notes.md
@@ -229,7 +229,7 @@ See [Migrating from sbt 0.13.x][Migrating-from-sbt-013x] also.
 - Replace cross building support with sbt-doge. This allows builds with projects that have multiple different combinations of cross scala versions to be cross built correctly.  The behaviour of ++ is changed so that it only updates the Scala version of projects that support that Scala version, but the Scala version can be post fixed with ! to force it to change for all projects. A -v argument has been added that prints verbose information about which projects are having their settings changed along with their cross scala versions. [#2613][2613] by [@jroper][@jroper]
 - `ivyLoggingLevel` is dropped to `UpdateLogging.Quiet` when CI environment is detected. [@eed3si9n][@eed3si9n]
 - Add logging of the name of the different `build.sbt` (matching `*.sbt`) files used. [#1911][1911] by [@valydia][@valydia]
-- Add the ability to call `aggregate` for the current project inside a build sbt file. By [@xuwei-k][@xuwei-k]
+- Add the ability to call [`aggregate`](Multi-Project.html#Aggregation) for the current project inside a build sbt file. By [@xuwei-k][@xuwei-k]
 - Add new global setting `asciiGraphWidth` that controls the maximum width of the ASCII graphs printed by commands like `inspect tree`. Default value corresponds to the previously hardcoded value of 40 characters. By [@RomanIakovlev][@RomanIakovlev].
 - Revamped documentation for [Scopes](www.scala-sbt.org/0.13/docs/Scopes.html), and added [Scope Delegation](www.scala-sbt.org/0.13/docs/Scope-Delegation.html). [@eed3si9n][@eed3si9n]
 - Ports sbt-cross-building's `^` and `^^` commands for plugin cross building. See below.
@@ -412,23 +412,23 @@ Too many people to thank here. See [Credits][Credits]
   [Credits]: Credits.html
   [Migrating-from-sbt-013x]: Migrating-from-sbt-013x.html
   [@eed3si9n]: https://github.com/eed3si9n
-  [@dwijnand]: http://github.com/dwijnand
-  [@jvican]: https://github.com/jvican
   [@Duhemm]: https://github.com/Duhemm
-  [@jsuereth]: https://github.com/jsuereth
+  [@dwijnand]: http://github.com/dwijnand
+  [@gheine]: https://github.com/gheine
   [@gkossakowski]: https://github.com/gkossakowski
-  [sbt-1-0-roadmap]: http://developer.lightbend.com/blog/2017-04-18-sbt-1-0-roadmap-and-beta1/
-  [@eed3si9n]: https://github.com/eed3si9n
   [@jroper]: https://github.com/jroper
-  [@valydia]: https://github.com/valydia
-  [@RomanIakovlev]: https://github.com/RomanIakovlev
-  [@smarter]: https://github.com/smarter
   [@jrudolph]: https://github.com/jrudolph
-  [@muuki88]: https://github.com/muuki88
-  [@Rogach]: https://github.com/Rogach
+  [@jsuereth]: https://github.com/jsuereth
+  [@jvican]: https://github.com/jvican
   [@Krever]: https://github.com/Krever
   [@lukeindykiewicz]: https://github.com/lukeindykiewicz
-  [@gheine]: https://github.com/gheine
+  [@muuki88]: https://github.com/muuki88
+  [@Rogach]: https://github.com/Rogach
+  [@RomanIakovlev]: https://github.com/RomanIakovlev
+  [@smarter]: https://github.com/smarter
+  [@valydia]: https://github.com/valydia
+  [@xuwei-k]: https://github.com/xuwei-k
+  [sbt-1-0-roadmap]: http://developer.lightbend.com/blog/2017-04-18-sbt-1-0-roadmap-and-beta1/
   [840]: https://github.com/sbt/sbt/issues/840
   [2613]: https://github.com/sbt/sbt/pull/2613
   [1911]: https://github.com/sbt/sbt/issues/1911
