notes on installing JDK

--- a/src/reference/ja/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/ja/00-Getting-Started/01-Setup/00.md
@@ -16,10 +16,9 @@ sbt のインストール
 
 sbt プロジェクトを作るためには、以下の手順をたどる必要がある:
 
+ - JDK をインストールする。(Oracle JDK 8 もしくは OpenJDK 8 を推奨)
  - sbt をインストールする。
  - 簡単な [hello world][Hello] プロジェクトをセットアップする。
-   - ソースファイルの入ったプロジェクトディレクトリを作る。
-   - ビルド定義を作る。
  - [実行する][Running]を読んで、sbt の実行方法を知る。
  - [.sbt ビルド定義][Basic-Def]を読んで、ビルド定義についてもっと詳しく知る。
 
