--- a/src/reference/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/00-Getting-Started/01-Setup/00.md
@@ -16,10 +16,9 @@ Installing sbt
 
 To create an sbt project, you'll need to take these steps:
 
+-   Install JDK (We recommend Oracle JDK 8 or OpenJDK 8).
 -   Install sbt.
 -   Setup a simple [hello world][Hello] project
-    -   Create a project directory with source files in it.
-    -   Create your build definition.
 -   Move on to [running][Running] to learn how to run sbt.
 -   Then move on to [.sbt build definition][Basic-Def] to learn more
     about build definitions.
