--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -68,7 +68,7 @@ on [GitHub](https://github.com/sbt/website/). Feel free to make
 corrections and add documentation.
 
 Documentation for 0.7.x has been
-[archived here](http://www.scala-sbt.org/0.7.7/docs/home.html). This
+[archived here](https://www.scala-sbt.org/0.7.7/docs/home.html). This
 documentation applies to sbt $app_version$.
 
 See also the [API Documentation](../api/index.html),
