--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -49,15 +49,15 @@ always write it in all lowercase letters. However, we are cool with [酢豚][sub
 
 #### How do I get help?
 
--  See [Support](http://www.scala-sbt.org/support.html#how-can-I-get-help)
+-  See [Support](https://www.scala-sbt.org/support.html#how-can-I-get-help)
 
 #### How do I report a bug?
 
--  See [Get Involved](http://www.scala-sbt.org/community.html#how-can-I-help)
+-  See [Get Involved](https://www.scala-sbt.org/community.html#how-can-I-help)
 
 #### How can I help?
 
--  See [Get Involved](http://www.scala-sbt.org/community.html#how-can-I-help)
+-  See [Get Involved](https://www.scala-sbt.org/community.html#how-can-I-help)
 
 ### Usage
 
