--- a/src/reference/90-Developers-Guide/00.md
+++ b/src/reference/90-Developers-Guide/00.md
@@ -2,7 +2,7 @@
 out: Developers-Guide.html
 ---
 
-  [HowCanIHelp]: http://www.scala-sbt.org/community.html#how-can-I-help
+  [HowCanIHelp]: https://www.scala-sbt.org/community.html#how-can-I-help
 
 Developer's Guide (Work in progress)
 ------------------------------------
