update Faq. avoid sbt.Build trait

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -414,26 +414,16 @@ In this example, we try to append a library to `libraryDependencies`
 before it is initialized with an empty sequence.
 
 ```scala
-object MyBuild extends Build {
-  val root = Project(id = "root", base = file("."),
-    settings = Seq(
-      libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
-    )
-  ).disablePlugins(plugins.IvyModule)
-}
+libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
+
+disablePlugins(plugins.IvyPlugin)
 ```
 
-To correct this, include the IvyModule plugin settings, which includes
+To correct this, include the IvyPlugin plugin settings, which includes
 `libraryDependencies := Seq()`. So, we just drop the explicit disabling.
 
 ```scala
-object MyBuild extends Build {
-  val root = Project(id = "root", base = file("."),
-    settings = Seq(
-      libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
-    )
-  )
-}
+libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
 ```
 
 A more subtle variation of this error occurs when using
