sbt 1.x use scalafmt. not scalariform
https://github.com/sbt/sbt/commit/9d87e6b3d411c38300d1151354aa2308b6e2befa

--- a/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
@@ -158,9 +158,9 @@ incremental compilation.
 
 ### Style matters
 
-#### Use scalariform
+#### Use scalafmt
 
-sbt-houserules comes with scalariform for formatting source code consistently.
+sbt-houserules comes with scalafmt for formatting source code consistently.
 
 #### Avoid procedure syntax
 
