--- a/src/reference/90-Developers-Guide/08-Compiler-Interface/00.md
+++ b/src/reference/90-Developers-Guide/08-Compiler-Interface/00.md
@@ -11,4 +11,4 @@ Scala compiler.
 It is used to get information from the Scala compiler, and must therefore
 be compiled against the Scala version in use for the configured projects.
 
-The code for this project can be found in the directory [compile/interface](https://github.com/sbt/sbt/tree/0.13/compile/interface).
+The code for this project can be found in the directory [internal/compiler-bridge](https://github.com/sbt/zinc/tree/v1.1.0/internal/compiler-bridge).
