fix compile error. Classpaths.managedJars does not return Seq[File]
- https://github.com/sbt/sbt/blob/v1.1.1/main/src/main/scala/sbt/Defaults.scala#L2867
- https://github.com/sbt/sbt/blob/v1.1.1/main-settings/src/main/scala/sbt/Def.scala#L21

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -325,7 +325,7 @@ task would look like:
 ```scala
 proguard := {
    val artifactTypes = Set("jar")
-    val cp: Seq[File] =
+    val cp =
       Classpaths.managedJars(proguardConfig, artifactTypes, update.value)
   // ... do something with , which includes proguard ...
 }
