--- a/src/reference/90-Developers-Guide/06-Datatype/00.md
+++ b/src/reference/90-Developers-Guide/06-Datatype/00.md
@@ -112,7 +112,7 @@ object Person {
 }
 ```
 
-Or the following Scala code (after changing the `target` property to `"Java"`):
+Or the following Java code (after changing the `target` property to `"Java"`):
 
 ```java
 public final class Person implements java.io.Serializable {
