add some Japanese translations of 05-Plugins-and-Best-Practices

--- a/src/reference/ja/02-DetailTopics/05-Plugins-and-Best-Practices/00.md
+++ b/src/reference/ja/02-DetailTopics/05-Plugins-and-Best-Practices/00.md
@@ -6,3 +6,6 @@ out: Plugins-and-Best-Practices.html
 
 プラグインとベストプラクティス
 --------------------------
+
+このパートでは，sbtの各トピックを詳細に扱う。
+これを読む前に、基礎知識として[始める sbt](Getting-Started)を読む必要があるだろう。
