Mention the need for good documentation
Fixes #https://github.com/sbt/sbt/issues/4195

--- a/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
@@ -25,6 +25,16 @@ Before 1.0 is release, we should clean up deprecations.
 On Scala 2.12 we should aim for zero warnings.
 One exception may be deprecation if it's required for cross-building.
 
+### Documentation
+
+> It is often useful to start with the Scaladoc before fleshing out a trait/class implementation by forcing you to consider the need for its existance.
+
+All newly introduced **public** traits and classes and, to a lesser extent, functions and methods, should have Scaladoc. A significant amount of existing sbt code lacks documentation and we need to repair this situation over time. If you see an opportunity to add some documentation, or improve existing documentation then this will also help.
+
+Package level documentation is a great place to describe how various components interact, so please consider adding/enhancing that where possible.
+
+For more information on good Scaladoc style, please refer to the [Scaladoc Style Guide](https://docs.scala-lang.org/style/scaladoc.html)
+
 ### Modular design
 
 #### Aim small
