--- a/src/reference/ja/01-General-Info/Changes/47-sbt-1.0-Release-Notes.md
+++ b/src/reference/ja/01-General-Info/Changes/47-sbt-1.0-Release-Notes.md
@@ -18,7 +18,7 @@ out: sbt-1.0-Release-Notes.html
 - `PathFinder.x_!(mapper)` は `PathFinder` の `def pair` に変更された。
 - `sbt.Path` の多くのメソッド (`relativeTo`、`rebase`、 `flat` など) は以前は `sbt` のパッケージオブジェクト経由でデフォルトの名前空間に入っていたが、それが無くなったので `sbt.io.Path` を使ってアクセスしてほしい。
 - sbt 1.0 は、スコープ成分としての `Global` を `Zero` と名前を変えて、`GlobalScope` と区別するようにした。 [@eed3si9n][@eed3si9n]
-- 今まで `update.value.configuration(...)` のような所でコンフィギュレーションを参照するのに文字列が使われいたのを、`ConfigRef` を使うように変更した。
+- 今まで `update.value.configuration(...)` のような所でコンフィギュレーションを参照するのに文字列が使われていたのを、`ConfigRef` を使うように変更した。
 - `sourceArtifactTypes` と `docArtifactTypes` を `Set[String]` から `Seq[String]` セッティングへと変更した。
 - early command 機能を `--<command>` という構文から `early(<command>)` へと変更した。
 - sbt 0.12 スタイルのハイフン区切りされたキー名を撤廃した (例えば `publish-local` から `publishLocal` に移行する)。
