Link to 0.13 archive instead of 0.7

--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -67,8 +67,8 @@ This documentation can be forked
 on [GitHub](https://github.com/sbt/website/). Feel free to make
 corrections and add documentation.
 
-Documentation for 0.7.x has been
-[archived here](https://www.scala-sbt.org/0.7.7/docs/home.html). This
+Documentation for 0.13.x has been
+[archived here](https://www.scala-sbt.org/0.13/docs/index.html). This
 documentation applies to sbt $app_version$.
 
 See also the [API Documentation](../api/index.html),
