--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -334,7 +334,7 @@ proguard := {
 #### How would I change sbt's classpath dynamically?
 
 It is possible to register additional jars that will be placed on sbt's
-classpath (since version 0.10.1). Through
+classpath. Through
 [State](../api/sbt/State\$.html), it is possible to obtain a
 [xsbti.ComponentProvider](../api/xsbti/ComponentProvider.html), which
 manages application components. Components are groups of files in the
